[project]
name = "shps"
version = "0.0.5"
authors = [
  {name="Claudio M. Perez", email="50180406+claudioperez@users.noreply.github.com"}
]

readme = "README.md"

keywords = [
  "seismic",
  "earthquake",
] 

[options]
#packages = find
install_requires = [
  "numpy",
  "scipy",
  "sympy",
  "sees",
  "matplotlib",
]

[project.urls]
Repository = "http://github.com/claudioperez/shps"

# [project.scripts]
# shps = "shps.__main__"

[build-system]
requires = [
    "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["shps.extern*", "shps.model*", "site*"]

