[project]
name = "bearings"
version = "0.0.1"
authors = [
  {name="Huy G. Pham", email="62033779+hgp297@users.noreply.github.com"}
]

description= "Isolated structural database and design"

readme = "README.md"

keywords = [
  "seismic",
  "earthquake",
  "structural"
] 

# TODO: check requirements

[options]
install_requires = [
  "opensees",
  "numpy",
  "scipy",
  "sympy",
  "sees",
  "matplotlib",
]

[project.urls]
Repository = "http://github.com/hgp297/isol-sys-database"


[build-system]
requires = [
    "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

